2008-10-17  Sebastien Pouliot  <sebastien@ximian.com> 

	* Namespace.cs: New. Helper class so we can report defects against 
	namespaces just like any other metadata object.
	* OpCodeBitmask.cs: Implement IEquatable<T>.
	* StackEntryAnalysis.cs: Implement IEquatable<T> for StoreSlot and
	InstructionWithLeave inner structures.
	* StackEntryUsageResult.cs: Implement IEquatable<T>.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* MethodSignatures.cs: Prefer a const over a static readonly for the
	OperatorAttributes private field (self-test).
	* OpCodeBitmask.cs: Add a bitmask that cover all conversion (Conv_*)
	instructions.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com>

	* PrimitiveReferences.cs: New. Helper class to get, shared, 
	TypeReference of the primitive types of the framework (expend as
	needed).

2008-09-19  Sebastien Pouliot  <sebastien@ximian.com>

	* OpCodeBitmask.cs: Add IsSubsetOf method.

2008-09-18  Néstor Salceda  <nestor.salceda@gmail.com>

	* MethodSignatures.cs: Added a new method signature for the delegate
	Invoke method.

2008-08-28  Sebastien Pouliot  <sebastien@ximian.com>

	* OpCodeBitmask.cs: New. Specialized class to handle a bitmask on
	Cecil's Code enum (which is too large for Bitmask<T>).

2008-07-16  Sebastien Pouliot  <sebastien@ximian.com>

	* StackEntryAnalysis.cs: Fix case where the LeaveStack is empty,
	i.e. null, when Pop is called.

2008-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodSignature.cs: Change Match method to behave more like 
	Equals, i.e. return false for null, not an exception.

2008-06-23  Sebastien Pouliot  <sebastien@ximian.com>

	* StackEntryAnalysis.cs: Move out GetPopCount and GetPushCount 
	(into InstructionRocks). Simplify some switch/case to generate
	less code.

2008-06-08  Sebastien Pouliot  <sebastien@ximian.com>

	* StackEntryAnalysis.cs: Move out nested UsageResult type. Also
	return a list, not an array, from FindLoad. [self-test]